--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <div id="app">
-      <h1>Air Force</h1>
+      <h1>Air Force CSVIT</h1>
     </div>
+    <canvas></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
